--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "batmusic",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,21 @@
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-notify": "^2.2.0",
     "gulp-sass": "^2.3.2"
-  }
+  },
+  "dependencies": {
+    "gulp": "^3.9.1",
+    "gulp-notify": "^2.2.0",
+    "gulp-sass": "^2.3.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/manudzmz/batmusic.git"
+  },
+  "bugs": {
+    "url": "https://github.com/manudzmz/batmusic/issues"
+  },
+  "homepage": "https://github.com/manudzmz/batmusic#readme",
+  "description": ""
 }
