--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.13.0",
+    "browserify": "^13.0.1",
     "gulp": "^3.9.1",
+    "gulp-buffer": "0.0.2",
+    "gulp-concat": "^2.6.0",
     "gulp-notify": "^2.2.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "gulp-tap": "^0.1.3"
   },
   "dependencies": {
     "gulp": "^3.9.1",
     "gulp-notify": "^2.2.0",
-    "gulp-sass": "^2.3.2"
+    "gulp-sass": "^2.3.2",
+    "jquery": "^3.1.0"
   },
   "repository": {
     "type": "git",
