--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-buffer": "0.0.2",
     "gulp-imagemin": "^3.0.2",
     "gulp-notify": "^2.2.0",
+    "gulp-responsive-images": "0.0.3",
     "gulp-sass": "^2.3.2",
     "gulp-tap": "^0.1.3"
   },
