--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "gulp-notify": "^2.2.0",
     "gulp-responsive-images": "0.0.3",
     "gulp-sass": "^2.3.2",
-    "gulp-tap": "^0.1.3"
+    "gulp-tap": "^0.1.3",
+    "gulp.spritesmith": "^6.2.1"
   },
   "dependencies": {
     "gulp": "^3.9.1",
